cabal-version:      2.4
name:               natural-scheme
version:            0.1.0.0
synopsis:
    Scheme-like syntax for writing natural deduction proof trees (so we can leverage structural editing plugins for lisp)

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Francesco Magliocca
maintainer:         franciman12@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  NaturalScheme.Tree
                    , NaturalScheme.Parser
                    , NaturalScheme.Postprocess

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: OverloadedStrings
    build-depends:    base ^>=4.14.2.0
                    , containers
                    , text
                    , megaparsec
    hs-source-dirs:   src
    default-language: Haskell2010

executable natural-scheme
    main-is:          Main.hs
    other-modules:    Latex
                    , BussProofs
    other-extensions: OverloadedStrings
    build-depends:    base ^>=4.14.2.0
                    , filepath
                    , natural-scheme
                    , process
                    , temporary
                    , text

    hs-source-dirs:   app
    default-language: Haskell2010
